Añadida clase Usuario para gestionar los datps de BD en Firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
         4. Datos del sensor GSR deberían de estar mostrándose.</string>
     <string name="start">Start</string>
     <string name="auth_failed">Error al iniciar sesión</string>
+    <string name="password_key" />
+    <string name="email_key" />
+    <string name="preference_file_key" />
 </resources>
