Pinta gráficas bien y sube el vídeo pero lento
- Modificadas clases auxiliares como Usuario y Experiencia para que sean acorde a la estructura de Firebase.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="password_key" />
     <string name="email_key" />
     <string name="preference_file_key" />
+    <string name="usuario_experiencia_a_realizar"></string>
 
     <!-- permission check dialog -->
     <string name="permission_check_dialog_title">This app needs location access</string>
