--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MBandGSR</string>
+    <string name="app_name">BitaGSR</string>
     <string name="action_settings">Settings</string>
 
     <string name="steps">Pasos para usar esta app: \n
