--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,7 @@
     <string name="app_name">BitaGSR</string>
     <string name="action_settings">Settings</string>
 
-    <string name="steps">Pasos para usar esta app: \n
-        1. Empareja la pulsera con tu teléfono.\n
-        2. Asegúrate de que la app Microsoft Band está instalada.\n
-        3. Presiona START.\n
-        4. Datos del sensor GSR deberían de estar mostrándose.</string>
+    <string name="steps"></string>
     <string name="start">Start</string>
     <string name="auth_failed">Error al iniciar sesión</string>
     <string name="password_key" />
