--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="steps"></string>
     <string name="start">Start</string>
-    <string name="auth_failed">Error al iniciar sesión</string>
+    <string name="auth_failed">Error al iniciar sesión. Por favor intente de nuevo</string>
     <string name="password_key" />
     <string name="email_key" />
     <string name="preference_file_key" />
