--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="permission_denied_dialog_title">Functionality limited</string>
     <string name="permission_denied_dialog_message">Since location access has no been granted, this app will not be able to discover bluetooth devices.</string>
     <string name="permission_denied_dialog_positive_button">OK</string>
+
+    <!--Dialog-->
+    <string name="dialog_si">Sí</string>
+    <string name="dialog_cancelar">Cancelar</string>
+
 </resources>
