--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,12 @@
     <!--Bottom Sheet Dialog-->
     <string name="t1_detail"><b>Experiencias que ya han sido terminadas</b> (cada sujeto ya ha realizado su prueba correspondiente).</string>
     <string name="t2_detail"><b>Experiencias pendientes por realizar</b> (hay sujetos que no han realizado su prueba todavía).</string>
+
+    <!--Bitalino-->
+    <string name="info_bitalino">
+        <font size="12"><b>\n1</b>. <i>Pulsar botón <b>Emparejar</b> para sincronizar con Bitalino mediante Bluetooth.</i></font>
+        <font size="12"><b>\n\n2</b>. <i>Pulsar <b>Conectar</b> para iniciar una conexión.</i></font>
+        <font size="12"><b>\n\n3</b>. <i>Presionar sobre el icono de inicio para comenzar a obtener datos.</i></font>
+        <font size="12"><b>\n\n4</b>. <i>Una vez terminado pulsar sobre el icono de Terminar para finalizar y guardar los datos.</i></font>
+    </string>
 </resources>
