--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
 
     <!--Bitalino-->
     <string name="info_bitalino">
-        <font size="12"><b>\n1</b>. <i>Pulsar botón <b>Emparejar</b> para seleccionar un dispositivo Bitalino mediante Bluetooth.</i></font>
+        <font size="12"><b>\n1</b>. <i>Pulsar botón <b>Sincronizar</b> para seleccionar un dispositivo Bitalino mediante Bluetooth.</i></font>
         <font size="12"><b>\n\n2</b>. <i>Pulsar <b>Conectar</b> para conectar con Bitalino.</i></font>
         <font size="12"><b>\n\n3</b>. <i>Presionar <b>Inicio</b> para comenzar a obtener datos.</i></font>
         <font size="12"><b>\n\n4</b>. <i>Una vez terminado pulsar <b>Terminar</b> guardar los datos.</i></font>
